--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -1067,3 +1067,11 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2015},
   publisher={Elsevier}
 }
+
+@book{brealey2006corporate,
+  title={Principles of corporate finance},
+  author={Brealey, Richard A and Myers, Stewart C and Allen, Franklin},
+  edition={13},
+  year={2020},
+  publisher={McGraw-Hill/Irwin Boston et al.}
+}
