Adding syllabus to github

--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -1075,3 +1075,14 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2020},
   publisher={McGraw-Hill/Irwin Boston et al.}
 }
+
+@article{chetty2011adjustment,
+  title={Adjustment costs, firm responses, and micro vs. macro labor supply elasticities: Evidence from Danish tax records},
+  author={Chetty, Raj and Friedman, John N and Olsen, Tore and Pistaferri, Luigi},
+  journal={The quarterly journal of economics},
+  volume={126},
+  number={2},
+  pages={749--804},
+  year={2011},
+  publisher={MIT Press}
+}
