--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -1086,3 +1086,25 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2011},
   publisher={MIT Press}
 }
+
+@article{myerson2000large,
+  title={Large poisson games},
+  author={Myerson, Roger B},
+  journal={Journal of Economic Theory},
+  volume={94},
+  number={1},
+  pages={7--45},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{feddersen2004rational,
+  title={Rational choice theory and the paradox of not voting},
+  author={Feddersen, Timothy J},
+  journal={Journal of Economic perspectives},
+  volume={18},
+  number={1},
+  pages={99--112},
+  year={2004},
+  publisher={American Economic Association}
+}
