--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -1108,3 +1108,21 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2004},
   publisher={American Economic Association}
 }
+
+@article{knutsson2022quality,
+  title={The Quality and Efficiency of Public and Private Firms: Evidence from Ambulance Services},
+  author={Knutsson, Daniel and Tyrefors, Bj{\"o}rn},
+  journal={The Quarterly Journal of Economics},
+  volume={137},
+  number={4},
+  pages={2213--2262},
+  year={2022},
+  publisher={Oxford University Press}
+}
+
+@article{gc2022intergenerational,
+  title={Intergenerational Mobility in the Land of Inequality},
+  author={GC Britto, Diogo and Fonseca, Alexandre de Andrade and Pinotti, Paolo and Sampaio, Breno and Warwar, Lucas},
+  year={2022},
+  publisher={CESifo Working Paper}
+}
