--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -1126,3 +1126,14 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2022},
   publisher={CESifo Working Paper}
 }
+
+@article{gethin2022brahmin,
+  title={Brahmin left versus merchant right: Changing political cleavages in 21 western democracies, 1948--2020},
+  author={Gethin, Amory and Mart{\'\i}nez-Toledano, Clara and Piketty, Thomas},
+  journal={The Quarterly Journal of Economics},
+  volume={137},
+  number={1},
+  pages={1--48},
+  year={2022},
+  publisher={Oxford University Press}
+}
