--- a/eae0310-7-assistencia-social.Rmd
+++ b/eae0310-7-assistencia-social.Rmd
@@ -2,7 +2,7 @@
 title: "EAE-0310: ECONOMIA DO SETOR PÚBLICO"
 author: "Pedro Forquesato<br/>http://www.pedroforquesato.com<br/>Sala 217/FEA2 - pforquesato@usp.br"
 institute: "Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo"
-date: "Aula 7: Assistência social<br/>2022/1"
+date: "Aula 7: Assistência social<br/>2023/1"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -211,13 +211,13 @@ Mas subsídios a *bens complementares ao trabalho* (creche, transporte público,
 class: middle
 ## Assistência social no Brasil
 
-No Brasil, os principais programas de transferência de renda para alívio da pobreza são, o Programa Bolsa Família (PBF), a partir de 2022 [Auxílio Brasil](https://www.gov.br/cidadania/pt-br/auxilio-brasil), e o Benefício de Prestação Continuada (BPC)
+No Brasil, os principais programas de transferência de renda para alívio da pobreza são, o Programa Bolsa Família (PBF) e o Benefício de Prestação Continuada (BPC)
 
-O PBF envolvia, até 2021: 
-1. Um benefício básico, de 89 reais, pago a famílias com renda per capita até R$89 por mês 
-2. Até 5 benefícios variáveis, de 41 reais, pagos à famílias com renda per capita até R$178, um por criança (<16), grávida ou recém-nascido
-3. Até 2 benefícios de 48 reais para adolescentes (16-17) com restrição de renda acima
-4. Benefício para Superação da Extrema Pobreza (BSP) complementa a renda até R$89 per capita por mês
+O PBF envolve, após alteração em 2023: 
+1. Um benefício básico de 142 reais per capita, para famílias que recebem até R$ 218 por pessoa por mês (se o benefício não chegar a 600 reais, é complementado até esse valor);
+2. Um acréscimo de 150 reais por criança até 6 anos e 50 por criança de 7-18 anos e gestante;
+3. Se a família sair da zona de pobreza (mas até meio salário mínimo por pessoa), recebe 50% do PBF por até 2 anos
+
 
 ---
 class: middle
