--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -1137,3 +1137,14 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2022},
   publisher={Oxford University Press}
 }
+
+@article{saez2016wealth,
+  title={Wealth inequality in the United States since 1913: Evidence from capitalized income tax data},
+  author={Saez, Emmanuel and Zucman, Gabriel},
+  journal={The Quarterly Journal of Economics},
+  volume={131},
+  number={2},
+  pages={519--578},
+  year={2016},
+  publisher={Oxford University Press}
+}
